// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toRedirectFiles > creates appropriate metadata absolute url > fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/">
    <link rel="canonical" href="https://docusaurus.io/" />
    <script>
      window.location.replace('https://docusaurus.io/' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/docs/intro?a=1">
    <link rel="canonical" href="https://docusaurus.io/docs/intro?a=1" />
    <script>
      window.location.replace('https://docusaurus.io/docs/intro?a=1');
    </script>
  </head>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/docs/intro#anchor">
    <link rel="canonical" href="https://docusaurus.io/docs/intro#anchor" />
    <script>
      window.location.replace('https://docusaurus.io/docs/intro#anchor');
    </script>
  </head>
</html>",
]
`;

exports[`toRedirectFiles > creates appropriate metadata for empty baseUrl > fileContent baseUrl=empty 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=/abc">
    <link rel="canonical" href="/abc" />
    <script>
      window.location.replace('/abc' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
]
`;

exports[`toRedirectFiles > creates appropriate metadata for root baseUrl > fileContent baseUrl=/ 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=/abc">
    <link rel="canonical" href="/abc" />
    <script>
      window.location.replace('/abc' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
]
`;

exports[`toRedirectFiles > creates appropriate metadata trailingSlash=false > fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/abc">
    <link rel="canonical" href="https://docusaurus.io/abc" />
    <script>
      window.location.replace('https://docusaurus.io/abc' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/def.html">
    <link rel="canonical" href="https://docusaurus.io/def.html" />
    <script>
      window.location.replace('https://docusaurus.io/def.html' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/">
    <link rel="canonical" href="https://docusaurus.io/" />
    <script>
      window.location.replace('https://docusaurus.io/' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
]
`;

exports[`toRedirectFiles > creates appropriate metadata trailingSlash=true > fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/abc">
    <link rel="canonical" href="https://docusaurus.io/abc" />
    <script>
      window.location.replace('https://docusaurus.io/abc' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/def.html">
    <link rel="canonical" href="https://docusaurus.io/def.html" />
    <script>
      window.location.replace('https://docusaurus.io/def.html' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/">
    <link rel="canonical" href="https://docusaurus.io/" />
    <script>
      window.location.replace('https://docusaurus.io/' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
]
`;

exports[`toRedirectFiles > creates appropriate metadata trailingSlash=undefined > fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/abc">
    <link rel="canonical" href="https://docusaurus.io/abc" />
    <script>
      window.location.replace('https://docusaurus.io/abc' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/def.html">
    <link rel="canonical" href="https://docusaurus.io/def.html" />
    <script>
      window.location.replace('https://docusaurus.io/def.html' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://docusaurus.io/">
    <link rel="canonical" href="https://docusaurus.io/" />
    <script>
      window.location.replace('https://docusaurus.io/' + window.location.search + window.location.hash);
    </script>
  </head>
</html>",
]
`;
